--- a/themes/ask-asya/theme.toml
+++ b/themes/ask-asya/theme.toml
@@ -1,22 +1,22 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/spf13/hugoThemes#themetoml for an example
 
-name = "ask-asya"
-license = "MIT"
-licenselink = "https://github.com/asya999/askAsya/blob/master/LICENSE.md"
-description = "Ask Asya Theme"
-homepage = "http://askAsya.com/"
-tags = ["tags", "categories"]
-features = ["mongodb", "nosql"]
-min_version = 0.14
+Name = "ask-asya"
+License = "MIT"
+Licenselink = "https://github.com/asya999/askAsya/blob/master/LICENSE.md"
+Description = "Ask Asya Theme"
+Homepage = "http://askAsya.com/"
+Tags = ["tags", "categories"]
+Features = ["mongodb", "nosql"]
+Min_version = 0.14
 
-[author]
-  name = "Asya Kamsky"
-  homepage = "http://askasya.com"
+[Author]
+  Name = "Asya Kamsky"
+  Homepage = "http://askasya.com"
 
-[params]
-  title = "Ask Asya"
-  tagline = "Answers to your burning questions about MongoDB"
+[Params]
+  Title = "Ask Asya"
+  Tagline = "Answers to your burning questions about MongoDB"
   GitHubUser = asya999
   DateForm = "Jan 2 2006"
 
